--- a/package.json
+++ b/package.json
@@ -22,17 +22,26 @@
     "ava": "^0.18.2",
     "babel-cli": "^6.24.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
     "bluebird": "^3.4.7",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "fecs": "^1.4.0",
     "html-webpack-plugin": "^2.29.0",
+    "keen-ui": "^1.0.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "memory-fs": "^0.4.1",
+    "node-sass": "^4.5.3",
     "nyc": "^10.3.2",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vue": "^2.3.3",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
@@ -45,7 +54,8 @@
     "concurrency": 5,
     "failFast": true,
     "files": [
-      "test/unit/*.test.js"
+      "test/unit/*.test.js",
+      "test/simple.test.js"
     ],
     "require": [
       "babel-register"
