--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,12 @@
 {
     "presets": [
         [
-            "env"
+            "env",
+            {
+                "targets": {
+                    "node": 4
+                }
+            }
         ],
         "stage-2"
     ],
