fix: npm test script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "babel src --out-dir lib",
     "lint": "fecs ./ --rule --type 'vue,js,css'",
     "prepublish": "npm run build",
-    "test": "npm run build && ./node_modules/.bin/nyc ava"
+    "test": "npm run build && nyc ava"
   },
   "repository": {
     "type": "git",
